--- a/gb/25/12/3/n14647814.md
+++ b/gb/25/12/3/n14647814.md
@@ -1,54 +1,57 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>ICE：撞死南加州男孩的嫌犯曾四次被遣返</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>美ICE：撞死南加州男孩的嫌犯曾四次被遣返</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/12/id14647862-2512022313562371-600x400.jpg" />
 <h6>2025年11月26日傍晚，加州圣地亚哥北郡艾斯康迪多（Escondido）11岁的男孩艾登（Aiden Antonio Torres De Paz）被车撞倒，次日早上不治身亡。ICE说嫌犯是四次被遣返后再次非法入境的墨西哥公民。（美国移民执法局ICE）</h6>
 <hr>
-	<p>【大纪元2025年12月03日讯】（大纪元记者杨婕报导）美国移民与海关执法局（ICE）12月2日<ahref="https://www.dhs.gov/news/2025/12/02/four-time-removed-criminal-illegal-alien-kills-11-year-old-boy-hit-and-run">宣布</a>，日前在加州圣地亚哥因撞人后逃逸重罪而被捕的司机，是曾四次被遣返后再次非法入境的墨西哥公民。ICE已向圣地亚哥县警长办公室递交了移民拘留令（immigration detainer），要求拘留该嫌犯。</p>
+	<p>【大纪元2025年12月03日讯】（大纪元记者杨婕报导）美国移民与海关执法局（ICE）12月2日<ahref="https://www.dhs.gov/news/2025/12/02/four-time-removed-criminal-illegal-alien-kills-11-year-old-boy-hit-and-run">宣布</a>，日前在加州圣地亚哥因撞人后逃逸重罪而被捕的司机，是曾四次被遣返后再次非法入境的墨西哥公民。ICE已向圣地亚哥县警长办公室递交了移民拘留令（immigration detainer），请求如果该嫌犯被释放，允许ICE有时间将其拘留。但是县警署12月3日回复大纪元，已经拒绝了ICE的移民拘留令请求。</p>
 <p>这名嫌犯是44岁的赫克托·巴尔德拉斯-阿希洛（Hector Balderas-Aheelor），他在感恩节前一天傍晚，在街上撞倒一名11岁的男孩后逃逸，该男孩次日因伤势过重不幸夭折。</p>
-<p>这位男孩住在圣地亚哥北郡艾斯康迪都市（Escondido）的艾登·安东尼奥·托雷斯德帕斯（Aiden Antonio Torres De Paz）。</p>
-<p>ICE说，阿希洛是非法移民，曾在2004年至2010年间被美国遣返四次。ICE 表示，“由于加州是‘庇护州’（sanctuary state），预计加州警方不会认同这份拘留令。”</p>
+<p>这位男孩是生前住在圣地亚哥北郡艾斯康迪都市（Escondido）的艾登·安东尼奥·托雷斯德帕斯（Aiden Antonio Torres De Paz）。</p>
+<p>ICE在12月2日的公告中说，阿希洛是非法移民，曾在2004年至2010年间被美国遣返四次。ICE 表示，“由于加州是‘庇护州’（sanctuary state），预计加州警方不会认同这份移民拘留令。”</p>
+<p>移民拘留令是联邦移民执法机构如ICE，向地方执法机构发出的请求，希望地方监狱在释放被关押者时，仍将其多关押一段时间（最多不超过48小时），以让ICE将人转移至其下监管。ICE发出移民拘留令的目的是为了逮捕或遣返外籍人士。</p>
+<p>ICE当天在X上<ahref="https://x.com/icegov/status/1996036770505298005?s=46" target="_blank" rel="noopener">发帖</a>说：“这个悲剧是可以避免的，因为ICE曾经对他发过移民拘留令。他四次违反移民法，但由于庇护政策，（加州）监狱对我们的拘留令置之不理。这是不和ICE合作所造成的实实在在的生命损失。”</p>
+<p>圣地亚哥县警署在12月3日早晨通过电邮告诉大纪元，已经拒绝了ICE的移民拘留令。警署发言人说，警署在11月29日收到了国土安全部对嫌犯的移民拘留令请求。警署“依据《加州政府法典》第 7282.5 条，对其犯罪记录进行了审查，拒绝了该移民拘留请求。”发言人并说：“圣地亚哥郡警长办公室遵守《加州价值法案》（SB 54）。”</p>
 <figure id="attachment_14647863" aria-describedby="caption-attachment-14647863" style="width: 289px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/12/id14647863-2512022313542371.jpg"><img decoding="async" class=" wp-image-14647863" title="撞死加州圣地亚哥男孩的嫌犯" src="https://i.epochtimes.com/assets/uploads/2025/12/id14647863-2512022313542371-600x537.jpg" alt="撞死加州圣地亚哥男孩的嫌犯" width="289" b="258" /></a><figcaption id="caption-attachment-14647863" class="wp-caption-text">2025年11月26日傍晚，涉嫌撞倒加州圣地亚哥北郡艾斯康迪都（Escondido）11岁男孩后逃逸的嫌犯、44岁的赫克托?巴尔德拉斯-阿希洛（Hector Balderas-Aheelor）。ICE说，阿希洛是四次被遣返后再次非法入境的墨西哥公民。 （美国移民执法局ICE）</figcaption></figure>
 <p>美国国土安全部助理部长特里西娅·麦克劳克林（Tricia McLaughlin）在12月2日的<ahref="https://www.dhs.gov/news/2025/12/02/four-time-removed-criminal-illegal-alien-kills-11-year-old-boy-hit-and-run">声明</a>中说：“赫克托·巴尔德拉斯-阿希洛之前已被驱逐四次，却仍选择第五次非法入境并犯下重罪。”</p>
 <p>她说：“感恩节本应是家人团聚、感恩的日子，但艾登·安东尼奥·托雷斯德帕斯一家却只能哀悼这位可爱孩子的离去——他的生命被一名犯罪的非法移民夺走。”</p>
 <p>她呼吁加州州长加文·纽森（Gavin Newsom）：“做正确的事，遵守ICE的拘留令。”</p>
-<p>圣地亚哥ABC10电视台报导，州长办公室在给该媒体的声明中说：“这名司机需要对这起悲剧性的肇事逃逸事件负责。在这个案件中，没有任何法律阻止联邦政府履行其职责。被驱逐出境后非法返回美国是联邦刑事犯罪，加州是承认联邦的刑事逮捕令的。”声明并说：“联邦政府承认了他们的过错，即在嫌疑人非法进入美国时未能逮捕他。加州的法律并不阻止他们现在采取行动。”</p>
-<p>11月26日傍晚5点左右，艾登在住家外玩，当他跑到街道边去捡足球时，被一辆汽车撞倒。司机没有停下，而是加速逃逸。艾登因伤势过重，于次日早晨辞世。</p>
+<p>州长办公室发言人Diana Crofts-Pelayo在12月3日上午给大纪元的一份声明中说：“这名司机需要对这起悲剧性的撞人后逃逸事件负责。在这个案件中，没有任何法律阻止联邦政府履行其职责。被驱逐出境后非法返回美国是联邦刑事犯罪，加州承认联邦的刑事逮捕令。”声明并说：“联邦政府承认了他们的过错，即在嫌疑人非法进入美国时未能逮捕他。加州的法律并不阻止他们现在采取行动。”</p>
+<p>11月26日傍晚5点左右，艾登在住家外玩，当他跑到街道边去捡足球时，被一辆汽车撞倒。司机没有停下，而是加速逃逸。艾登随后被送到圣地亚哥雷迪儿童医院。但因伤势过重，于次日感恩节早晨不治身亡。</p>
 <p>警方根据现场证据和监控画面等，很快锁定了车辆和嫌疑人。两天后的11月29日，警方在艾斯康迪都的一处住宅逮捕了阿希洛。被逮捕时，警方发现阿希洛开的卡车上有明显撞击的痕迹。</p>
-<p>艾斯康迪多警方公布的嫌犯的名字是赫克托·巴尔德拉斯-阿马德（Hector Balderas-Amador）。但是 ICE 表示，阿马德和阿希洛是同一人。</p>
-<p>11月29日当天，阿希洛被关进圣地亚哥县维斯塔（Vista）拘留所，保释金最初为5万美元，后提高至10万美元。ICE发出的“移民扣押令”（ICE Detainer），意味着如果他缴交保释金后获得释放，联邦执法官员可以立刻逮捕他。</p>
+<p>艾斯康迪多警方公布的嫌犯的名字是赫克托·阿马德-巴尔德拉斯（Hector Amador Balderas）。但是 ICE 表示，阿马德和阿希洛是同一人。</p>
+<p>11月29日当天，阿希洛被关进圣地亚哥县维斯塔（Vista）拘留所，保释金最初为5万美元，后提高至10万美元。</p>
 <p>目前阿希洛被控一项“撞人后逃逸并致人死亡”重罪（Felony Hit-and-Run Causing Death），该罪最高可被判4年州立监狱监禁。</p>
-<p>圣地亚哥县检察官办公室12月2日晚告诉大纪元，阿希洛接受提审的时间没有变化，仍是明天（12月3日）下午1点30分在圣地亚哥北郡的维斯塔加州高等法院。</p>
+<p>圣地亚哥县检察官办公室12月2日晚告诉大纪元，阿希洛接受提审的时间没有变化，仍是12月3日下午1点30分在圣地亚哥北郡的维斯塔加州高等法院。</p>
+<p><em>注：本文于12月3日上午美国西部时间，增加了圣地亚哥县警署办公室和加州州长办公室给大纪元的回复。</em></p>
 <p>责任编辑：李沐恩#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14646161.md#1">五步骤自己做彩虹巧克力 增添节日气氛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14644860.md#1">南加州感恩节“火鸡小跑” 延续慈善传统</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14639979.md#1">圣地亚哥著名景点公园明年停车开始收费</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639882.md#1">圣地亚哥国际机场对非乘客再敞开大门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/6/n10619679.md#1" target="_blank">林辉：教授从练习低头弯腰到乐极生悲</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/9/n11172953.md#1" target="_blank">只做了这一件事 他们绝处逢生（二）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/19/n10650677.md#1" target="_blank">林辉：开了北大自杀先例的史学教授</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/25/n11409005.md#1" target="_blank">法轮功反迫害 川普政府与美国国会公开声援</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/1/n14472598.md#1">【品读唐诗】登高秋望 吟成古今第一七言律</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/26/n14492521.md#1">【品读唐诗】孟浩然的岘山第一诗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644037.md#1">难以归位的怅然若失——解读苏轼《后赤壁赋》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635938.md#1">尚书公想招穷书生为婿 夫人选了贵公子 结局出人意料（上）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/9/n14632431.md#1">苏东坡生活禅：东坡肉好吃的珍味秘诀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647538.md#1">【新闻大破解】香港恶火 红祸下系统性崩坏？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647664.md#1">【直播】议长约翰逊主持国会圣诞树点亮仪式</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647511.md#1">【十字路口】港大火曝一国两制弊端 敲台湾警钟</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14641853.md#1">10款最好的二手SUV 本田CR-V居首</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645932.md#1">官场动荡 马兴瑞缺席中共政治局学习会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14646107.md#1">一杯咖啡卖12899元 上海天价咖啡引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645754.md#1">香港大火夺逾百命 甄妮黄秋生等艺人呛官方</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646909.md#1">滨崎步等日星演出受阻 中共外交部发言人甩锅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645801.md#1">滨崎步上海演唱会被取消 独自登台完成演出</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645821.md#1">周润发满头白发登MAMA 率全场哀悼火灾罹难者</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645828.md#1">坤达涉闪兵 《玩很大》最后录影曝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645735.md#1">为何很多人要改用“傻瓜手机”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647181.md#1">为何冬天时你应该在窗户边放一碗盐？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645970.md#1">鱼刺卡喉咙的风险比你想像的高 如何处理？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646574.md#1">为何无条件的感恩会让你幸福？如何培养？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647107.md#1">私人飞机飞行员的薪资有多少？有何优缺点？</a></li>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/12/3/n14647814.htm">ICE：撞死南加州男孩的嫌犯曾四次被遣返</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/12/3/n14647814.htm">美ICE：撞死南加州男孩的嫌犯曾四次被遣返</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647814.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
